-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.0 Alpha
-
None
-
-
5f1f955524d003af4714e43c19062fa07c1d58f8, 9bbf08fcf3ad141b92dda3af2103dac28ff40f00
This function is documented to take ownership of the object passed in, but never deletes it.
| For Gerrit Dashboard: QTBUG-41853 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 96776,2 | Android: Make memory handling in QClipboard consistent with iOS | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |