Android: Make memory handling in QClipboard consistent with iOS

On iOS we do deleteLater() on the mime data instead of deleting
it directly, in case the application should happen to use the
pointer again directly after setting it on the clipboard.
Technically it would be a bug in the application, but using
deleteLater() is safer and it's better to be consistent with
iOS so that a buggy application crashes in the same places in
both.

Change-Id: I2996d6c7816a2f83615a43609f5be207aaa72c86
Task-number: QTBUG-41853
Reviewed-by: BogDan Vatra <bogdan@kde.org>

cregit: 9bbf08fcf3ad141b92dda3af2103dac28ff40f00 https://github.com/qt/qtbase/commit/9bbf08fcf3ad141b92dda3af2103dac28ff40f00